Fixes #272 by wrapping the edit description at 80% of the screen width

--- a/app/styles/hmda-pilot.less
+++ b/app/styles/hmda-pilot.less
@@ -104,7 +104,7 @@ footer {
 
         div:nth-child(2) {
             text-align: right;
-        }        
+        }
     }
 }
 
@@ -182,7 +182,8 @@ footer {
 
 h2 label { display: inline; }
 .edit-explanation {
-    font-size: 1.3em;
+    .h3;
+    .u-w80pct;
 }
 
 .instructions {
